--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,14 @@ services:
     ports:
       - "3000:3000"
     depends_on:
-      - postgres
-      - kafka
+      postgres:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
 
   postgres:
     container_name: postgres
-    image: postgres:14-alpine
+    image: postgres:14
     restart: always
     ports:
       - "5432:5432" 
@@ -22,13 +24,13 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     healthcheck:
-      test: [ "CMD", "pg_isready -q -d ${POSTGRES_DB} -U ${POSTGRES_USER}" ]
+      test: [ "CMD-SHELL", "pg_isready -q -d ${POSTGRES_DB} -U ${POSTGRES_USER}" ]
       interval: 10s
       timeout: 5s
       retries: 5
     volumes:
-      - /var/lib/postgresql/data
-      - /var/lib/postgresql/log
+      - pg_data:/var/lib/postgresql/data
+      - pg_log:/var/lib/postgresql/log
 
   pgadmin:
     container_name: pgadmin
@@ -80,3 +82,7 @@ services:
       kafka:
         condition: service_healthy
     restart: unless-stopped
+
+volumes:
+  pg_data:
+  pg_log:
